--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-      <h1>Diário</h1>
-      <div class="d-flex">
-        <a href='#'><img src='/assets/logout.png' class="imageLogout" alt=''></a>
-      </div>
+<nav class="navbar bg-body-tertiary" style="background-color: aquamarine;">
+  <div class="container-fluid">
+    <h1>Diário</h1>    
+    <div class="d-flex">
+      <a href='#'><img src='/assets/logout.png' class="imageLogout" alt=''></a>
     </div>
-  </nav>
+  </div>
+</nav>
